--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -95,3 +95,8 @@ ul.table-of-contents {
     height: 50vh;
     min-height: 500px;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+}
